# DOC-Extractor

./: .gitignore  README.md  extractor.py  pyproject.toml
extracted/: 2506.06576v2_tika.json  Design of a Multipurpose Freeze Dryer.json  Design of a Multipurpose Freeze Dryer_tika.json  birthdayframe.json  birthdayframe_tika.json  combined_tika.json  rishi.py_tika.json
